resource compra
