# Loja/backend/src/resources/compra/compra.router.ts
@@ -1,0 +1,9 @@
+import { Router} from "express";
+import compraController from "./compra.controller";
+
+const router = Router()
+
+router.post("/addCarrinho", compraController.addCarrinho)
+router.post("/realizarCompra", compraController.realizarCompra)
+
+export default router
