# Loja/backend/src/router/routerV1.ts
@@ -4,6 +4,7 @@ import exercicioRouter from "../resources/exercicio/exercicio.router"
 import languageRouter from "../resources/language/language.router"
 import usuarioRouter from "../resources/usuario/usuario.router"
 import authRouter from "../resources/auth/auth.router"
+import compraRouter from "../resources/compra/compra.router"
 
 const router = Router();
 
@@ -12,6 +13,10 @@ router.use(
    // #swagger.tags = ['Auth']
   authRouter
 );
+
+router.use("/compra", 
+// #swagger.tags = ['Compra']
+compraRouter)
 
 router.use("/exercicio", 
 // #swagger.tags = ['Exercicio']
@@ -28,5 +33,6 @@ languageRouter);
 router.use("/usuario", 
 // #swagger.tags = ['Usuários']
 usuarioRouter)
+
 
 export default router;
